bug fix - service lines visible with slide-out on big screens

--- a/app/assets/stylesheets/page/root.scss
+++ b/app/assets/stylesheets/page/root.scss
@@ -299,8 +299,10 @@ main {
         top: 0;
         left: 0;
         transition: all .5s ease-in-out;
+        opacity: 1;
         &.slide-out{
           left: -1000px;
+          opacity: 0;
           transition: all .5s ease-in-out;
         }
         > li {
